--- a/src/pages/Market-Page/marketmore.css
+++ b/src/pages/Market-Page/marketmore.css
@@ -86,8 +86,7 @@
   }
   
   .mkphoto__map {
-    width: 100%;
-    max-width: 600px;
+    width: 600px;
     height: 400px;
     display: flex;
     justify-content: center;
