--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -1,18 +1,24 @@
-/* 기본적인 푸터 스타일 */
+
 #footer__wrap {
   width: 100%;
-  background-color: #f8f8f8; /* 배경색을 원하는 대로 조정 */
-  padding: 20px 0; /* 상하 패딩 설정 */
+  background-color: #b5e1ff; 
+  padding: 20px 0; 
   box-sizing: border-box;
 }
 
 .footer__inner {
-  max-width: 1200px; /* 최대 너비 설정 */
-  margin: 0 auto; /* 가운데 정렬 */
-  padding: 0 20px; /* 좌우 패딩 설정 */
+  max-width: 1200px; 
+  margin: 0 auto; 
+  padding: 0 20px; 
   display: flex;
-  justify-content: center; /* 가운데 정렬 */
+  justify-content: center;
   align-items: center; 
+  font-size: 20px;
+  text-shadow: 
+        -1px -1px 0 #ffffff,  
+         1px -1px 0 #ffffff,
+        -1px  1px 0 #ffffff,
+         1px  1px 0 #ffffff;
 }
 
 .footer__left,
