--- a/src/components/section/card.css
+++ b/src/components/section/card.css
@@ -2,7 +2,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 40px auto; /* 섹션 사이의 간격 추가 */
+    margin: 40px auto; 
+    background-image: url('../../assets/images/cloud2.png');
+    background-size: cover; 
+    background-position: center; 
+    position: relative; 
+}
+
+.card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5); /* 색상 오버레이 */
+    z-index: 1;
+    pointer-events: none; /* 오버레이가 클릭을 방해하지 않도록 설정 */
+}
+
+.card * {
+    position: relative;
+    z-index: 2;
 }
 
 .small-images-container {
@@ -55,7 +76,6 @@
     border-right-color: #e7e7e7;
     border-left: 0;
     margin-left: 0px; 
-  
 }
 
 .speech-bubble-right {
@@ -110,5 +130,5 @@
 .welcome-text {
     font-size: 25px;
     font-weight: bold;
-    color: #333; /* 텍스트 색상 */
+    color: #333;
 }
